# local-ai-writing-auditor

./: .env.example  .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  review.py
config/: settings.py  taxonomy.py
data/articles/: sample.txt
docs/: auditor-pipeline-design.md
reference/avoid-ai-writing/: SKILL.md
src/: pipeline.py
src/agents/: auditor.py  rewriter.py
src/detectors/: lexical.py  llm_lexical.py  llm_rhythmic.py  llm_structural.py  llm_tonal.py
src/eval/: judge.py  metrics.py
src/schemas/: __init__.py  audit.py  lexical.py  rewrite.py
src/ui/: app.py
tests/: test_auditor.py  test_imports.py  test_lexical_detector.py  test_llm_agents.py  test_pipeline.py  test_rewriter.py  test_schemas.py
