[project]
name = "local-ai-writing-auditor"
version = "0.1.0"
description = "Privacy-first Ollama-powered agentic pipeline to detect and rewrite AI writing tells"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama",
    "instructor",
    "pydantic>=2.0",
    "pydantic-settings",
    "langfuse",
    "loguru",
    "streamlit",
    "typer",
    "pandas",
    "rich",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
